# changelog-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
data/: mojo2.log.txt  mojo2.reference.log.txt
examples/: call-git-log.rs  demo-hubcaps-show-pulls.rs  demo-octocrab-show-issues.rs  embedded-toml-config.rs  parse-git-log.rs  parse-git-reference.rs
src/: api.rs  builder.rs  changelog.rs  changeset.rs  config.rs  error.rs  imports.rs  lib.rs  sync.rs
src/imports/: commit_msg.rs  from_changelog.rs  from_git_repo.rs  mod.rs
tests/: CHANGELOG.md  ch-2.5.10p3.md  ch-2.5.14p1.md  ch-2.5.14p3.md  ch-2.5.15.md  sync-test.rs
