[package]
name = "changelog"
version = "0.1.0"
authors = ["Petr Kozelka <pkozelka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.11"
chrono = "0.4.19"
structopt = "0.3.18"
log = "0.4.11"
stderrlog = "0.5.0"
regex = "1.3.9"
