[package]
name = "changelog"
version = "0.1.0"
authors = ["Petr Kozelka <pkozelka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.11"
chrono = "0.4.19"
structopt = "0.3.18"
log = "0.4.11"
stderrlog = "0.5.0"
regex = "1.3.9"
anyhow = "1.0.35"
thiserror = "1.0.24"
serde = "1.0.125"
serde_derive = "1.0.125"
toml = "0.5.8"

[dev-dependencies]
hubcaps = "0.6.2"
#tokio = { version = "0.3.5", features = ["macros", "rt-multi-thread"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
futures = "0.3.8"
octocrab = "0.8.4"
