[package]
name = "changelog"
version = "0.1.0"
authors = ["Petr Kozelka <pkozelka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.23"
chrono = "0.4.19"
structopt = "0.3.18"
log = "0.4.14"
stderrlog = "0.5.0"
regex = "1.5.4"
anyhow = "1.0.44"
thiserror = "1.0.29"
serde = "1.0.130"
serde_derive = "1.0.130"
toml = "0.5.8"

[dev-dependencies]
hubcaps = "0.6.2"
#tokio = { version = "0.3.5", features = ["macros", "rt-multi-thread"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.8"
octocrab = "0.8.4"
